--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@ant-design/icons": "^5.2.6",
     "@picocss/pico": "^1.5.11",
     "antd": "^5.13.2",
+    "embla-carousel-autoplay": "^8.0.0-rc22",
+    "embla-carousel-react": "^8.0.0-rc22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.21.3"
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.21.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
